--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,9 +1,9 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
-      <div class="col-sm-12 m-t-5 text-left" *ngIf="this.mode === 'view'">
+      <!-- <div class="col-sm-12 m-t-5 text-left" *ngIf="this.mode === 'view'">
         ApproverName
-      </div>
+      </div> -->
       <div class="col-sm-12 m-t-5 text-right">
         <div *ngIf="this.mode === 'edit'">
           <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
