rfq supplier bug fix,header fix ,grn certified qty validation,snack bar color changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,13 @@ body {
 }
 
 @import "./assets/scss/main.scss";
+
+.success-snackbar {
+  background: #2196f3 !important;
+  color: white !important;
+}
+
+.warning-snackbar {
+  background: $alert-color !important;
+  color: black !important;
+}
