--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -437,13 +437,13 @@ mat-accordion {
   }
 }
 // SnackBar Css
-.blue-snackbar {
-  background: $blue-color;
-  color: #ffffff;
-  .mat-simple-snackbar {
-    justify-content: center;
-  }
-}
+// .blue-snackbar {
+//   background: $blue-color;
+//   color: #ffffff;
+//   .mat-simple-snackbar {
+//     justify-content: center;
+//   }
+// }
 
 .error-msg {
   color: red;
@@ -502,10 +502,10 @@ mat-accordion {
   color: #569414;
 }
 
-    .signupForm-error-msg.green-colour{
-      color:#569414;
-  }
-.material-info{
+.signupForm-error-msg.green-colour {
+  color: #569414;
+}
+.material-info {
   padding-top: 8px;
   font-size: 16px;
 }
