--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="col-sm-6">
     <button mat-raised-button class="main-background-color main-button color-white pull-right" (click)="addRFQ()">
-      Add RFQ
+      Float RFQ
     </button>
   </div>
 </div>
