--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,6 @@ body {
 }
 
 .warning-snackbar {
-  background: $alert-color !important;
-  color: black !important;
+  background: #2197bb !important;
+  color: #fff !important;
 }
