--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -60,7 +60,8 @@
             </a>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="mat-elevation-z8 col-sm-12 rfq-custom-mat-width">
+
+        <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="col-sm-12 rfq-custom-mat-width">
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
             <td mat-cell *matCellDef="let element">
@@ -122,6 +123,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+        
       </mat-expansion-panel>
     </mat-accordion>
   </div>
