--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -19,8 +19,9 @@
       </span>
     </span>
     <span class="p-r-5">
-      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="navigateToUploadPage()" type="button">Back</button>
+      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" type="button">Back</button>
     </span>
+    <!-- (click)="navigateToUploadPage()" -->
     <span>
       <button mat-raised-button matStepperNext [disabled]="this.supplierCounter === 0" (click)="reviewRfq()" class="main-background-color main-button color-white">
         Next
@@ -29,7 +30,7 @@
   </div>
 </div>
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
-  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms" class="mat-elevation-z8 col-sm-12">
+  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
     <ng-container matColumnDef="Supplier Name">
       <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
       <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i">
