--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -18,12 +18,12 @@
                         {{rfqDetails.dueDate | date}}
                     </div>
 
-                    <div class="col-md-3 p-t-10 main-color">
+                    <!-- <div class="col-md-3 p-t-10 main-color">
                         <button mat-button class="pull-right font-size14"
                             (click)="openDialog1(rfqDetails.documentsList, rfqDetails.terms)">
                             View Terms & Conditions/Documents
                         </button>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- second row -->
@@ -42,6 +42,14 @@
                         </mat-card>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-md-12">
+                <mat-card class="m-b-10 p-b-10" *ngIf="rfqDetails.terms">Payment Terms:
+                    <span classs="p-l-15">
+                    {{ rfqDetails.terms.termsDesc.trim() === "Others" ? rfqDetails.terms.otherDesc : rfqDetails.terms.termsDesc }}
+                    </span>
+                </mat-card>
             </div>
         </div>
 
@@ -67,18 +75,26 @@
                             </td>
                         </ng-container>
 
+                        <!-- Date Column -->
+                        <ng-container matColumnDef="Required Date">
+                            <th class="font-size14" mat-header-cell *matHeaderCellDef>Required Date</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.fullfilmentDate | date }}
+                            </td>
+                        </ng-container>
+
                         <!-- Quantity Column -->
                         <ng-container matColumnDef="Quantity">
-                            <th class="font-size14" mat-header-cell *matHeaderCellDef class="text-align-center">Quantity</th>
-                            <td mat-cell *matCellDef="let element" class="text-align-center">
-                                {{ element.rfqMaterialQty }}
+                            <th class="font-size14" mat-header-cell *matHeaderCellDef class="text-align-center w-15">Quantity</th>
+                            <td mat-cell *matCellDef="let element" class="text-align-center w-15">
+                                {{ element.rfqMaterialQty }}<span class="p-l-5">{{ element.materialUnit }}</span>
                             </td>
                         </ng-container>
 
                         <!-- Makes Column -->
                         <ng-container matColumnDef="Makes">
-                            <th class="font-size14" mat-header-cell *matHeaderCellDef>Makes</th>
-                            <td mat-cell *matCellDef="let element">
+                            <th class="font-size14 text-center w-40" mat-header-cell *matHeaderCellDef>Makes</th>
+                            <td mat-cell class="text-center w-40" *matCellDef="let element">
                                 <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
                                     {{make}}
                                 </span>
