small changes in PO

--- a/src/app/features/first-login/add-user/add-user.component.html
+++ b/src/app/features/first-login/add-user/add-user.component.html
@@ -6,7 +6,7 @@
           <form class="update-info__form" *ngIf="addUserForm" [formGroup]="addUserForm">
             <div class="row">
               <div class="col-md-12">
-                <h3 class="user-profile text-center text-uppercase pt-2 pb-4">Invite Users</h3>
+                <h3 class="user-profile text-center text-uppercase pt-2 pb-4">Invite Team Members</h3>
               </div>
             </div>
 
@@ -30,7 +30,7 @@
                   <!-- other.controls.other.controls[i].controls.email.errors -->
                 </div>
 
-                <div class="col-md-2">
+                <!-- <div class="col-md-2">
                   <mat-form-field class="border-input w-100">
                     <input matInput type="text" placeholder="Phone number" formControlName="contactNo" />
                   </mat-form-field>
@@ -39,7 +39,7 @@
                   >
                     Enter Valid Phone No
                   </mat-error>
-                </div>
+                </div> -->
 
                 <div class="col-md-3">
                   <mat-form-field class="border-select w-100 role-input">
