--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -61,8 +61,8 @@
                             </td>
                         </ng-container>
 
-                        <ng-container matColumnDef="Certified Quantity">
-                            <th mat-header-cell *matHeaderCellDef>Certified Quantity</th>
+                        <ng-container matColumnDef="Received Quantity">
+                            <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
                             <td mat-cell *matCellDef="let element;let i = index" class="border-input">
                                 <!-- <input matInput type="number" placeholder="Quantity"> -->
 
