--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -3,29 +3,37 @@
 <div mat-dialog-content class="mat-tab-add-address-modal-po">
     <mat-tab-group class="overflow-remove">
         <mat-tab label="Choose Address" class="addressDialog">
-            <form *ngIf="address" [formGroup]="selectAddressFrm">
-                <div class="row">
-                    <div class="col-xs-12 p-t-10 show-address-po-modal">
-                        <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
-                            <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of address">
-                                <mat-radio-button class="p-l-25" [value]="add" [checked]="add.primaryAddress===1">
-                                   <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
-                                    <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
-                                    <span *ngIf="add.city">, {{add.city}}</span>
-                                    <span *ngIf="add.state">, {{add.state}}</span>
-                                     <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
-                                </mat-radio-button>
-                            </div>
-                        </mat-radio-group>
+
+            <ng-container *ngIf="address && address[0].addressId > 0; else noAddress">
+                <form *ngIf="address" [formGroup]="selectAddressFrm">
+                    <div class="row">
+                        <div class="col-xs-12 p-t-10 show-address-po-modal">
+                            <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
+                                <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of address">
+                                    <mat-radio-button class="p-l-25" [value]="add" [checked]="add.primaryAddress===1">
+                                       <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
+                                        <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
+                                        <span *ngIf="add.city">, {{add.city}}</span>
+                                        <span *ngIf="add.state">, {{add.state}}</span>
+                                         <span *ngIf="add.pinCode">, {{add.pinCode}}</span>
+                                    </mat-radio-button>
+                                </div>
+                            </mat-radio-group>
+                        </div>
                     </div>
-                </div>
-                <div mat-dialog-actions class="pull-right">
-                    <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                        cdkFocusInitial (click)="onselectAddress()">
-                        Save
-                    </button>
-                </div>
-            </form>
+                    <div mat-dialog-actions class="pull-right">
+                        <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                            cdkFocusInitial (click)="onselectAddress()">
+                            Save
+                        </button>
+                    </div>
+                </form>
+            </ng-container>
+
+            <ng-template #noAddress>
+                <p class="py-5 text-center">No address available.</p>
+            </ng-template>
+
         </mat-tab>
 
         <mat-tab label="Add Address">
@@ -39,23 +47,26 @@
                                         formControlName="addressLine1" />
                                 </mat-form-field>
                             </div>
-                              <div class="row border-input">
-                                <mat-form-field class="border-select col-xs-12 p-r-150 p-l-150">
-                                    <mat-label>City</mat-label>
-                                    <mat-select formControlName=city>
+
+                            <div class="row border-input">
+                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
+                                    <input matInput type="string" (input)="getPincode($event)" placeholder="Pincode" formControlName="pinCode" />
+                                </mat-form-field>
+                            </div>
+
+                            <div class="row border-input">
+                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
+                                    <!-- <mat-label>City</mat-label> -->
+                                    <input matInput type="string" formControlName="city" placeholder="city" />
+                                    <!-- <mat-select formControlName=city>
                                         <mat-option *ngFor="let city of cities" [value]="city.value">
                                             {{city.viewValue}}
                                         </mat-option>
-                                    </mat-select>
+                                    </mat-select> -->
                                 </mat-form-field>
                             </div>
-                            <div class="row border-input">
-                                <mat-form-field class="col-xs-12 p-r-150 p-l-150">
-                                    <input matInput type="string" placeholder="Pincode" formControlName="pinCode" />
-                                </mat-form-field>
-                            </div>
-                          
                         </div>
+
                         <div class="col-md-6">
                             <div class="row border-input">
                                 <mat-form-field class="col-xs-12 p-r-300">
@@ -66,7 +77,8 @@
                             
                             <div class="row border-input">
                                 <mat-form-field class="col-xs-12 p-r-300">
-                                    <input matInput type="text" placeholder="State" formControlName="state" />
+                                    <input matInput type="string" formControlName="state" placeholder="state" />
+                                    <!-- <input matInput type="text" placeholder="State" formControlName="state" /> -->
                                 </mat-form-field>
                             </div>
                             <div class="row border-input">
