--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -53,10 +53,10 @@
     </ng-container>
 
     <!-- PAN No. Column -->
-    <ng-container matColumnDef="PAN No.">
+    <!-- <ng-container matColumnDef="PAN No.">
       <th mat-header-cell *matHeaderCellDef>PAN No.</th>
       <td mat-cell *matCellDef="let element">{{ element.pan }}</td>
-    </ng-container>
+    </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
