--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -66,8 +66,8 @@
                                 </td>
                             </ng-container>
 
-                            <ng-container matColumnDef="Certified Quantity">
-                                <th mat-header-cell *matHeaderCellDef class="text-align-center">Certified Quantity</th>
+                            <ng-container matColumnDef="Received Quantity">
+                                <th mat-header-cell *matHeaderCellDef class="text-align-center">Received Quantity</th>
                                 <td mat-cell *matCellDef="let element" class="text-align-center">
                                     {{ element.deliveredQty }}
                                 </td>
