--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -57,13 +57,13 @@
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="Certified Quantity">
-            <th mat-header-cell *matHeaderCellDef>Certified Quantity</th>
+          <ng-container matColumnDef="Received Quantity">
+            <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
             <td mat-cell *matCellDef="let element;let i = index" class="border-input">
               <!-- <input matInput type="number" placeholder="Quantity"> -->
 
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="certifiedQty" type="number" placeholder="Certified Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
+                <input matInput formControlName="certifiedQty" type="number" placeholder="Received Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
               </mat-form-field>
               <!-- {{ element.certifiedQuantity }} -->
             </td>
