--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -111,7 +111,7 @@
               <mat-label>Project Start Date*</mat-label>
               <span class="form-placeholder">{{ ref.value | date: "dd-MMM-yyy" }}</span>
               <input hidden matInput [matDatepicker]="startDate" formControlName="startDate" #ref
-                (dateChange)="getStart(ref.value)" (focus)="startDate.open()" readonly [min]="minDate"/>
+                (dateChange)="getStart(ref.value)" (focus)="startDate.open()" readonly/>
               
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate startView="month" [startAt]="startDate"></mat-datepicker>
